# ML-service

./: alembic.ini  pyproject.toml
src/app/adapters/: unit_of_work.py
src/app/adapters/gateways/: dataset.py  metric.py  model.py  user.py
src/app/adapters/migrations/: env.py
src/app/adapters/migrations/scripts/: init_dictionaries.sql
src/app/adapters/migrations/versions/: 2024_05_05_1343-5c79a9bc475e_init_migration.py  2024_05_10_1211-de5c86fcb9d5_init_dicts.py  2024_05_10_1816-a1073b81a18c_fix_eval_metrics_fk.py  2024_05_12_1218-fdd45cb454f5_add_cascase_delete.py  2024_05_12_1234-258780cfce09_add_cascase_updatw.py
src/app/adapters/models/: __init__.py  base.py  datasets.py  metrics.py  models.py  users.py
src/app/api/routers/: dataset.py  index.py  model.py  user.py
src/app/api/schemas/: dataset.py
src/app/application/models/: dataset.py  metric.py  model.py  user.py
src/app/application/protocols/: database.py
src/app/application/usecases/dataset/: create_dataset.py  get_all.py  get_by_id.py
src/app/infrastructure/: ioc.py
src/app/main/: di.py  routers.py  settings.py  web.py
src/app/main/api/routers/: dataset.py  dicts.py  model.py  user.py
src/app/main/api/schemas/: model.py
